packages/jsii/test/negatives/neg.expose-unexported-type-external.ts
// Attempt to expose an unexported type defined in another file should fail
// because that type will not be available in the module spec.

import { UnexportedType } from './mylib';

export class ExportedType {
  public p?: UnexportedType;
}
